--- a/testCordova/assets/www/index.html
+++ b/testCordova/assets/www/index.html
@@ -19,20 +19,28 @@
 -->
 <html>
     <head>
+		<title>AppMobile</title>
+		<!-- jQuery Mobile setup -->
+		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<link rel="stylesheet" href="jquery/jquery.mobile-1.2.0.min.css" />
+		<script src="jquery/jquery-1.9.1.js"></script>
+		<script src="jquery/jquery.mobile-1.2.0.min.js"></script>
+		<!-- phonegap setup -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
+            <div data-role="page">
+				<div data-role="header">
+					<h1>Un Titre</h1>
+                </div><!-- /header -->
+                <div data-role="content">       
+					<p>Hello world</p>              
+				</div><!-- /content -->
+			</div><!-- /page -->
         <script type="text/javascript" src="cordova-2.4.0.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
