--- a/testCordova/assets/www/index.html
+++ b/testCordova/assets/www/index.html
@@ -23,13 +23,15 @@
 		<!-- jQuery Mobile setup -->
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<link rel="stylesheet" href="jquery/jquery.mobile-1.2.0.min.css" />
-		<script src="jquery/jquery-1.9.1.js"></script>
+		<script src="jquery/jquery-1.8.2.js"></script>
 		<script src="jquery/jquery.mobile-1.2.0.min.js"></script>
 		<!-- phonegap setup -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+		<script type="text/javascript" src="cordova-2.4.0.js"></script>
+
         
     </head>
     <body>
@@ -40,11 +42,16 @@
                 <div data-role="content">       
 					<p>Hello world</p>              
 				</div><!-- /content -->
+				<div data-role="footer">		
+					<div data-role="navbar">
+						<ul>
+							<li><a href="#">page Un</a></li>
+							<li><a href="#">Deux</a></li>
+							<li><a href="#">Trois</a></li>
+						</ul>
+					</div><!-- /navbar -->
+				</div><!-- /footer -->
 			</div><!-- /page -->
-        <script type="text/javascript" src="cordova-2.4.0.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
+        
     </body>
 </html>
