--- a/testCordova/assets/www/index.html
+++ b/testCordova/assets/www/index.html
@@ -21,37 +21,77 @@
     <head>
 		<title>AppMobile</title>
 		<!-- jQuery Mobile setup -->
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<meta name="viewport" content="width=device-width, initial-scale=2 user-scalable=no"> 
 		<link rel="stylesheet" href="jquery/jquery.mobile-1.2.0.min.css" />
 		<script src="jquery/jquery-1.8.2.js"></script>
 		<script src="jquery/jquery.mobile-1.2.0.min.js"></script>
 		<!-- phonegap setup -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
 		<script type="text/javascript" src="cordova-2.4.0.js"></script>
-
+	<script type="text/javascript" src="text">
+		$( document ).on( "mobileinit", function() {
+    // Faites vos changements de configuration du framework jQuery Mobile ici !
+	$.support.cors = true;
+    $.mobile.allowCrossDomainPages = true;
+});
+</script>
         
     </head>
     <body>
-            <div data-role="page">
+            <div data-role="page" id="Acceuil">
 				<div data-role="header">
-					<h1>Un Titre</h1>
+					<h1>Acceuil</h1>
                 </div><!-- /header -->
                 <div data-role="content">       
-					<p>Hello world</p>              
+					<p>page d'acceuil</p>              
 				</div><!-- /content -->
 				<div data-role="footer">		
-					<div data-role="navbar">
+					<div data-role="navbar" data-id="foo1" data-position="fixed">
 						<ul>
-							<li><a href="#">page Un</a></li>
-							<li><a href="#">Deux</a></li>
-							<li><a href="#">Trois</a></li>
+							<li><a href="#Acceuil" class="ui-btn-active ui-state-persist">Acceuil</a></li>
+							<li><a href="#Ajout">Ajout</a></li>
+							<li><a href="#Credits">Credits</a></li>
 						</ul>
 					</div><!-- /navbar -->
 				</div><!-- /footer -->
 			</div><!-- /page -->
         
+		
+			<div data-role="page" id="Ajout">
+				<div data-role="header">
+					<h1>Ajout</h1>
+                </div><!-- /header -->
+                <div data-role="content">       
+					<p>page ajouter un pret</p>              
+				</div><!-- /content -->
+				<div data-role="footer">		
+					<div data-role="navbar" data-id="foo1" data-position="fixed">
+						<ul>
+							<li><a href="#Acceuil">Acceuil</a></li>
+							<li><a href="#Ajout" class="ui-btn-active ui-state-persist">Ajout</a></li>
+							<li><a href="#Credits">Credits</a></li>
+						</ul>
+					</div><!-- /navbar -->
+				</div><!-- /footer -->
+			</div><!-- /page -->
+			
+			<div data-role="page" id="Credits">
+				<div data-role="header">
+					<h1>Credits</h1>
+                </div><!-- /header -->
+                <div data-role="content">       
+					<p>page des credits</p>              
+				</div><!-- /content -->
+				<div data-role="footer">		
+					<div data-role="navbar" data-id="foo1" data-position="fixed">
+						<ul>
+							<li><a href="#Acceuil">Acceuil</a></li>
+							<li><a href="#Ajout">Ajout</a></li>
+							<li><a href="#Credits" class="ui-btn-active ui-state-persist">Credits</a></li>
+						</ul>
+					</div><!-- /navbar -->
+				</div><!-- /footer -->
+			</div><!-- /page -->
     </body>
 </html>
