--- a/testCordova/assets/www/index.html
+++ b/testCordova/assets/www/index.html
@@ -20,27 +20,32 @@
 <html>
     <head>
 		<title>AppMobile</title>
-		<!-- jQuery Mobile setup -->
 		<meta name="viewport" content="width=device-width, initial-scale=2 user-scalable=no"> 
-		<link rel="stylesheet" href="jquery/jquery.mobile-1.2.0.min.css" />
-		<script src="jquery/jquery-1.8.2.js"></script>
-		<script src="jquery/jquery.mobile-1.2.0.min.js"></script>
 		<!-- phonegap setup -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
 		<script type="text/javascript" src="cordova-2.4.0.js"></script>
-	<script type="text/javascript" src="text">
-		$( document ).on( "mobileinit", function() {
-    // Faites vos changements de configuration du framework jQuery Mobile ici !
-	$.support.cors = true;
-    $.mobile.allowCrossDomainPages = true;
-});
+		<!-- jQuery Mobile setup -->
+		
+		<link rel="stylesheet" href="jquery/jquery.mobile-1.2.0.min.css" />
+		
+		<script src="jquery/jquery-1.8.2.js"></script>
+		<script type="text/javascript">
+			$( document ).bind( "mobileinit", function() {
+				// Faites vos changements de configuration du framework jQuery Mobile ici !
+				$.support.cors = true;
+				$.mobile.allowCrossDomainPages = true;
+				$.mobile.defaultPageTransition = "slide";
+			});
 </script>
+		<script src="jquery/jquery.mobile-1.2.0.min.js"></script>
+
+	
         
     </head>
     <body>
             <div data-role="page" id="Acceuil">
-				<div data-role="header">
+				<div data-role="header" data-position="fixed">
 					<h1>Acceuil</h1>
                 </div><!-- /header -->
                 <div data-role="content">       
@@ -59,7 +64,7 @@
         
 		
 			<div data-role="page" id="Ajout">
-				<div data-role="header">
+				<div data-role="header" data-position="fixed">
 					<h1>Ajout</h1>
                 </div><!-- /header -->
                 <div data-role="content">       
@@ -77,7 +82,7 @@
 			</div><!-- /page -->
 			
 			<div data-role="page" id="Credits">
-				<div data-role="header">
+				<div data-role="header" data-position="fixed">
 					<h1>Credits</h1>
                 </div><!-- /header -->
                 <div data-role="content">       
