--- a/testCordova/assets/www/index.html
+++ b/testCordova/assets/www/index.html
@@ -52,7 +52,7 @@
 				idPret = 0;
 				idPretSuppr = 0;
 			
-				getContacts();
+				//getContacts();
 				var db = window.openDatabase("pretBDD", "1.0", "pretBDD", 200000);
 				db.transaction(populateDB, errorCB, successCB);
 			}
@@ -114,7 +114,7 @@
 			
 			function ajoutPret()
 			{
-				if ($("input.textautre").val()=='' ||
+				if (($("select.malist").val()=="autre" && $("input.textautre").val()=='') ||
 					$("#titlePret").val()=='' ||
 					$("#description").val()=='' )
 				{
@@ -129,13 +129,31 @@
 			
 			function insertionPret(tx)
 			{
+				var date = new Date;
+				var jours = new Array('Dimanche', 'Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi');
+				var mois = new Array('Janvier', 'Février', 'Mars', 'Avril', 'Mai', 'Juin', 'Juillet', 'Août', 'Septembre', 'Octobre', 'Novembre', 'Décembre');
+
+				var annee = date.getFullYear();
+				var moi = date.getMonth();
+				var jour_num = date.getDate();
+				var jour = date.getDay();
+
+				var h = date.getHours();
+				var m = date.getMinutes();
+				var s = date.getSeconds();
+				if(h<10){ h = "0"+h;}
+				if(m<10){ m = "0"+m;}
+				if(s<10){ s = "0"+s;}
+
+				var Date_Heure = jours[jour]+' '+jour_num+' '+mois[moi]+' '+annee+', '+h+' h '+m+' mn '+s+' s.';
+				
 				if($("select.malist").val()=="autre")
 				{
-					tx.executeSql('INSERT INTO Pret (Titre, Description, Date, Nom, Prenom, Type) VALUES (?,?,?,?,?,?)',[$("#titlePret").val(), $("#description").val(), new Date();, $("#prenomContact").text(), $("#nomContact").text(), $("#autre").val()]);
+					tx.executeSql('INSERT INTO Pret (Titre, Description, Date, Nom, Prenom, Type) VALUES (?,?,?,?,?,?)',[$("#titlePret").val(), $("#description").val(), Date_Heure, $("#prenomContact").text(), $("#nomContact").text(), $("#autre").val()]);
 				}
 				else
 				{
-					tx.executeSql('INSERT INTO Pret (Titre, Description, Date, Nom, Prenom, Type) VALUES (?,?,?,?,?,?)',[$("#titlePret").val(), $("#description").val(), new Date();, $("#prenomContact").text(), $("#nomContact").text(), $("select.malist").val()]);
+					tx.executeSql('INSERT INTO Pret (Titre, Description, Date, Nom, Prenom, Type) VALUES (?,?,?,?,?,?)',[$("#titlePret").val(), $("#description").val(), Date_Heure, $("#prenomContact").text(), $("#nomContact").text(), $("select.malist").val()]);
 				}
 				$("input.textautre").val('');
 				$("#titlePret").val('');
