suppression des transitions

--- a/testCordova/assets/www/index.html
+++ b/testCordova/assets/www/index.html
@@ -37,7 +37,7 @@
 				//amélioration de jquery avec phonegap (cf doc jquery)
 				$.support.cors = true;
 				$.mobile.allowCrossDomainPages = true;
-				$.mobile.defaultPageTransition = "slide";
+				$.mobile.defaultPageTransition = "none";
 			});
 		</script>
 		<script src="jquery/jquery.mobile-1.2.0.min.js"></script>
